error.

+++
*** New command 'next-error-select-buffer'.
It can be used to set any buffer as the next one to be used by
'next-error' and 'previous-error'.

** nxml-mode

---
*** The default value of 'nxml-sexp-element-flag' is now t.
This means that pressing 'C-M-SPACE' now selects the entire tree by
default, and not just the opening element.

** Eshell

---
*** Expansion of history event designators is disabled by default.
To restore the old behavior, use

    (add-hook 'eshell-expand-input-functions
              #'eshell-expand-history-references)

---
*** The function 'eshell-uniquify-list' has been renamed from
'eshell-uniqify-list'.

*** The function 'eshell/kill' is now able to handle signal switches.
Previously 'eshell/kill' would fail if provided a kill signal to send
to the process.  It now accepts signals specified either by name or by
its number.

---
*** Emacs now follows symlinks in history-related files.
The files specified by 'eshell-history-file-name' and
'eshell-last-dir-ring-file-name' can include symlinks; these are now
followed when Emacs writes the relevant history variables to the disk.

** Shell

---
*** Program name completion inside remote shells works now as expected.

+++
*** The variable 'shell-file-name' can be set now as connection-local
variable for remote shells.  It still defaults to "/bin/sh".

** Pcomplete

*** The function 'pcomplete-uniquify-list' has been renamed from
'pcomplete-uniqify-list'.

** Auth-source

---
*** The Secret Service backend supports the ':create' key now.

** Tramp

+++
*** New connection method "nextcloud", which allows to access OwnCloud
or NextCloud hosted files and directories.

+++
*** New connection method "rclone", which allows to access system
storages via the 'rclone' program.  This feature is experimental.

+++
*** New connection method "sudoedit", which allows to edit local files
with different user credentials.  Contrary to the "sudo" method, no